--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.1.*",
         "laravelcollective/html": "^5.1",
         "guzzlehttp/guzzle": "~5.3|~6.0",
-        "naux/sendcloud": "^1.1"
+        "naux/sendcloud": "^1.1",
+        "barryvdh/laravel-ide-helper": "^2.3",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -43,6 +45,8 @@
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta",
             "php artisan optimize"
         ]
     },
