完成图片裁剪功能

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "naux/sendcloud": "^1.1",
         "barryvdh/laravel-ide-helper": "^2.3",
         "doctrine/dbal": "^2.5",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "yuanchao/laravel-5-markdown-editor": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
